# real_time_news_search_engine

./: .env  Makefile  README.md  consumer.py  fetching_data.py  producer.py  pyproject.toml
